--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "init": "^0.1.2",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
-    "postcss": "^7",
+    "postcss": "^8.4.12",
     "tailwind": "^3.0.23"
   }
 }
