--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "init": "^0.1.2",
+    "mongoose": "^6.3.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
