--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.3",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
   },
