--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "next": "12.1.4",
     "react": "18.0.0",
