--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.3",
+    "react-top-loading-bar": "^2.1.0",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
   },
