--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "11.6.0",
+    "@emotion/react": "11.7.0",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.9.0",
+    "apexcharts": "^3.23.1",
+    "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "feather-icons-react": "^0.5.0",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "next": "12.1.4",
     "paytmchecksum": "^1.5.0",
     "react": "18.0.0",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.3",
