--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.6.0",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.9.0",
+    "@sendgrid/mail": "^7.7.0",
     "apexcharts": "^3.23.1",
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
@@ -31,6 +32,7 @@
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.3",
     "react-top-loading-bar": "^2.1.0",
+    "sendgrid": "^5.2.3",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
   },
