--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.9.0",
     "@sendgrid/mail": "^7.7.0",
     "apexcharts": "^3.23.1",
+    "cloudinary": "^1.30.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
@@ -25,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "next": "12.1.4",
+    "next-image-cloudinary": "^1.0.2",
     "paytmchecksum": "^1.5.0",
     "react": "18.0.0",
     "react-apexcharts": "^1.3.7",
