--- a/package.json
+++ b/package.json
@@ -13,22 +13,32 @@
     "@emotion/react": "11.7.0",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.6.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.9.0",
     "@sendgrid/mail": "^7.7.0",
     "apexcharts": "^3.23.1",
+    "aws-sdk": "^2.1184.0",
     "cloudinary": "^1.30.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "feather-icons-react": "^0.5.0",
+    "formidable": "^2.0.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
+    "material-icons-react": "^1.0.4",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "12.1.4",
     "next-image-cloudinary": "^1.0.2",
+    "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.3.0",
     "react": "18.0.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.0.0",
@@ -37,6 +47,7 @@
     "react-top-loading-bar": "^2.1.0",
     "sendgrid": "^5.2.3",
     "tailwindcss": "^3.0.24",
+    "url": "^0.11.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
