--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,7 +33,7 @@
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "next": "12.1.4",
+    "next": "11.1.3",
     "next-image-cloudinary": "^1.0.2",
     "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
