--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "emailjs-com": "^3.2.0",
     "feather-icons-react": "^0.5.0",
     "formidable": "^2.0.1",
     "init": "^0.1.2",
