--- a/package.json
+++ b/package.json
@@ -18,26 +18,23 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.9.0",
-    "@sendgrid/mail": "^7.7.0",
     "apexcharts": "^3.23.1",
     "aws-sdk": "^2.1184.0",
-    "cloudinary": "^1.30.1",
-    "cloudinary-react": "^1.8.1",
+    "axios": "^0.27.2",
     "clsx": "1.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "feather-icons-react": "^0.5.0",
-    "formidable": "^2.0.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "material-icons-react": "^1.0.4",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer-s3-v2": "^2.2.1",
     "next": "12.1.4",
-    "next-image-cloudinary": "^1.0.2",
+    "next-s3-upload": "^0.2.2",
     "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
     "primeicons": "^5.0.0",
@@ -45,10 +42,10 @@
     "react": "18.0.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.0.0",
+    "react-file-input": "^0.2.5",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.3",
     "react-top-loading-bar": "^2.1.0",
-    "sendgrid": "^5.2.3",
     "tailwindcss": "^3.0.24",
     "url": "^0.11.0",
     "yarn": "^1.22.18"
