--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "cloudinary": "^1.30.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "1.1.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.2",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.1",
     "feather-icons-react": "^0.5.0",
     "formidable": "^2.0.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "material-icons-react": "^1.0.4",
+    "mongodb": "^4.9.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
