--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sendgrid/mail": "^7.7.0",
     "apexcharts": "^3.23.1",
     "aws-sdk": "^2.1184.0",
+    "axios": "^0.27.2",
     "cloudinary": "^1.30.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "1.1.1",
