--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.23.1",
     "aws-sdk": "^2.1184.0",
     "axios": "^0.27.2",
+    "browserslist": "^4.21.4",
     "cloudinary": "^1.30.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "1.1.1",
