--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@emotion/react": "11.7.0",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.6.0",
-    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.9.0",
+    "@next/eslint-plugin-next": "^12.3.1",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.39.0",
     "apexcharts": "^3.23.1",
@@ -31,6 +30,7 @@
     "dotenv": "^16.0.2",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "eslint-plugin-react": "^7.31.10",
     "express": "^4.18.1",
     "feather-icons-react": "^0.5.0",
     "formidable": "^2.0.1",
@@ -39,17 +39,15 @@
     "material-icons-react": "^1.0.4",
     "mongodb": "^4.9.1",
     "mongoose": "^6.3.3",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "next": "12.1.4",
     "next-image-cloudinary": "^1.0.2",
     "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
-    "react": "18.0.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
-    "react-dom": "18.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-toastify": "^9.0.3",
     "react-top-loading-bar": "^2.1.0",
@@ -62,6 +60,7 @@
     "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.12",
     "tailwind": "^3.0.23"
   }
