--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.6.0",
     "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.9.0",
     "@next/eslint-plugin-next": "^12.3.1",
     "@sendgrid/mail": "^7.7.0",
