--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/material": "^5.9.0",
     "@next/eslint-plugin-next": "^12.3.1",
     "@sendgrid/mail": "^7.7.0",
-    "@stripe/stripe-js": "^1.39.0",
+    "@stripe/stripe-js": "^1.41.0",
     "apexcharts": "^3.23.1",
     "aws-sdk": "^2.1184.0",
     "axios": "^0.27.2",
@@ -53,6 +53,7 @@
     "react-toastify": "^9.0.3",
     "react-top-loading-bar": "^2.1.0",
     "sendgrid": "^5.2.3",
+    "stripe": "^10.14.0",
     "tailwindcss": "^3.0.24",
     "url": "^0.11.0",
     "yarn": "^1.22.18"
