--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "jsonwebtoken": "^8.5.1",
     "material-icons-react": "^1.0.4",
     "mongodb": "^4.9.1",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.9.0",
     "next": "12.1.4",
     "next-image-cloudinary": "^1.0.2",
     "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
     "primeicons": "^5.0.0",
     "primereact": "^8.3.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^18.2.0",
@@ -56,7 +57,7 @@
     "stripe": "^10.14.0",
     "tailwindcss": "^3.0.24",
     "url": "^0.11.0",
-    "yarn": "^1.22.18"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
